# material

./: README.md
Clase dash/: main.py  pyproject.toml
Clase dash/pages/: datos.py  index.py  prediccion.py
Clase fastapi/: main.py  pyproject.toml
Clase html/: index.html
Clase html/css/: main.css
Clase tailwind/: contacto.html  dashboards.html  index.html  prediccion.html
Proyecto final/backend/: crime_impact_model.joblib  main.py  pyproject.toml
Proyecto final/convert-html-dash/: main.py  pyproject.toml
Proyecto final/convert-html-dash/html/: acerca.html  footer.html  header.html  index.html  mapa.html  prediccion.html  tableros.html
Proyecto final/convert-html-dash/pages/: acerca.py  footer.py  header.py  index.py  mapa.py  prediccion.py  tableros.py
Proyecto final/frontend/: main.py  pyproject.toml
Proyecto final/frontend/assets/css/: main.css
Proyecto final/frontend/pages/: acerca.py  index.py  mapa.py  prediccion.py  tableros.py
Proyecto final/html/: acerca.html  index.html  mapa.html  prediccion.html  tableros.html
Proyecto final/ml/: main.ipynb  pyproject.toml
Script descarga/: datacrimes.sql  main.py  pyproject.toml
