[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.1",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.11",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
